--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,8 @@
-cmake_minimum_required(VERSION 3.14.0)
+cmake_minimum_required(VERSION 3.21.0)
 project(octo VERSION 0.1.0)
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++17 -O2")
-# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}")
 
 file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
 
-add_definitions(-DPROJECT_NAME="${PROJECT_NAME}")
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 if (WIN32)
@@ -15,7 +11,6 @@ if (WIN32)
         "$ENV{VULKAN_SDK}\\Include"
         "$ENV{SDKS_ROOT}\\glfw\\include"
         "$ENV{SDKS_ROOT}\\glm\\glm"
-        "$ENV{SDKS_ROOT}\\spdlog\\include"
     )
 
     target_link_directories(${PROJECT_NAME} PUBLIC
@@ -26,15 +21,7 @@ if (WIN32)
 
     target_link_libraries(${PROJECT_NAME} glfw3 vulkan-1)
 elseif (UNIX)
-    target_include_directories(${PROJECT_NAME} PUBLIC
-        "${VULKAN_SDK}/include"
-    )
-
-    target_link_directories(${PROJECT_NAME} PUBLIC
-        "${VULKAN_SDK}/lib"
-    )
-
     target_link_libraries(${PROJECT_NAME} glfw vulkan)
 endif()
 
-
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
