update vulkan sdk: 1.2.189.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 if (WIN32)
     target_include_directories(${PROJECT_NAME} PUBLIC
         $ENV{MINGW_ROOT}/x86_64-w64-mingw32/include
-        $ENV{USERPROFILE}/dev/sdks/vulkan/1.2.189.0/Include
+        $ENV{USERPROFILE}/dev/sdks/vulkan/Include
         $ENV{USERPROFILE}/dev/sdks/glfw/include
         $ENV{USERPROFILE}/dev/sdks/glm/glm
         $ENV{USERPROFILE}/dev/sdks/entt/src
@@ -18,7 +18,7 @@ if (WIN32)
 
     target_link_directories(${PROJECT_NAME} PUBLIC
         $ENV{MINGW_ROOT}/x86_64-w64-mingw32/lib
-        $ENV{USERPROFILE}/dev/sdks/vulkan/1.2.189.0/Lib
+        $ENV{USERPROFILE}/dev/sdks/vulkan/Lib
         $ENV{USERPROFILE}/dev/sdks/glfw/lib-mingw-w64
     )
 
