new initial commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,37 +1,52 @@
-cmake_minimum_required(VERSION 3.20.0)
-project(octo VERSION 0.1.0)
+cmake_minimum_required(VERSION 3.19)
+project(octo VERSION 0.1.0 LANGUAGES CXX)
 
+# Modules
+include(FetchContent)
+
+# Definitions
 add_definitions(-DENGINE_NAME="${PROJECT_NAME}")
 add_definitions(-DVERSION_MAJOR=${PROJECT_VERSION_MAJOR})
 add_definitions(-DVERSION_MINOR=${PROJECT_VERSION_MINOR})
 add_definitions(-DVERSION_PATCH=${PROJECT_VERSION_PATCH})
 
-file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
+# GLFW
+FetchContent_Declare(
+    glfw
+    GIT_REPOSITORY git@github.com:glfw/glfw.git
+    GIT_TAG 3.3.8
+)
 
+if(NOT glfw_POPULATED)
+    FetchContent_Populate(glfw)
+    set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+    add_subdirectory(${glfw_SOURCE_DIR} ${glfw_BINARY_DIR})
+endif()
+
+# Sources
+file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.cpp)
+
+# Executable
 add_executable(${PROJECT_NAME} ${SOURCES})
+
+# Compilation
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
+# Includes
+target_include_directories(${PROJECT_NAME} PUBLIC
+    ${glfw_SOURCE_DIR}/include
+    ${PROJECT_SOURCE_DIR}/src/include
+)
+
+# Libs
 if (WIN32)
-    target_include_directories(${PROJECT_NAME} PUBLIC
-        $ENV{MINGW_ROOT}/x86_64-w64-mingw32/include
-        $ENV{USERPROFILE}/dev/sdks/vulkan/Include
-        $ENV{USERPROFILE}/dev/sdks/glfw/include
-        $ENV{USERPROFILE}/dev/sdks/glm/glm
-        $ENV{USERPROFILE}/dev/sdks/entt/src
-        ${PROJECT_SOURCE_DIR}/src
-    )
-
     target_link_directories(${PROJECT_NAME} PUBLIC
-        $ENV{MINGW_ROOT}/x86_64-w64-mingw32/lib
-        $ENV{USERPROFILE}/dev/sdks/vulkan/Lib
-        $ENV{USERPROFILE}/dev/sdks/glfw/lib-mingw-w64
+        ${glfw_BINARY_DIR}/src/Debug
     )
 
-    target_link_libraries(${PROJECT_NAME} glfw3 vulkan-1 shaderc_shared)
+    target_link_libraries(${PROJECT_NAME} glfw3)
 elseif (UNIX)
-    target_include_directories(${PROJECT_NAME} PUBLIC
-        ${PROJECT_SOURCE_DIR}/src
-    )
-
-    target_link_libraries(${PROJECT_NAME} glfw vulkan shaderc_shared)
+    target_link_libraries(${PROJECT_NAME} glfw)
 endif()
