--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ project(octo VERSION 0.1.0 LANGUAGES CXX)
 include(FetchContent)
 
 # Definitions
-add_definitions(-DENGINE_NAME="${PROJECT_NAME}")
-add_definitions(-DVERSION_MAJOR=${PROJECT_VERSION_MAJOR})
-add_definitions(-DVERSION_MINOR=${PROJECT_VERSION_MINOR})
-add_definitions(-DVERSION_PATCH=${PROJECT_VERSION_PATCH})
+add_definitions(-DOCTO_PROJECT_NAME="${PROJECT_NAME}")
+add_definitions(-DOCTO_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
+add_definitions(-DOCTO_VERSION_MINOR=${PROJECT_VERSION_MINOR})
+add_definitions(-DOCTO_VERSION_PATCH=${PROJECT_VERSION_PATCH})
 
 # GLFW
 FetchContent_Declare(
@@ -25,6 +25,20 @@ if(NOT glfw_POPULATED)
     add_subdirectory(${glfw_SOURCE_DIR} ${glfw_BINARY_DIR})
 endif()
 
+# GLM
+FetchContent_Declare(glm
+    GIT_REPOSITORY https://github.com/g-truc/glm.git
+    GIT_TAG 0.9.9.8
+)
+
+# FetchContent_GetProperties(glm)
+
+if(NOT glm_POPULATED)
+    FetchContent_Populate(glm)
+    set(GLM_TEST_ENABLE OFF CACHE BOOL "" FORCE)
+    add_subdirectory(${glm_SOURCE_DIR} ${glm_BINARY_DIR})
+endif()
+
 # Sources
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.cpp)
 
@@ -37,7 +51,7 @@ target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 # Includes
 target_include_directories(${PROJECT_NAME} PUBLIC
     ${glfw_SOURCE_DIR}/include
-    ${PROJECT_SOURCE_DIR}/src/include
+    ${PROJECT_SOURCE_DIR}/include
 )
 
 # Libs
