--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,26 +5,42 @@ add_definitions(-DENGINE_NAME="${PROJECT_NAME}")
 add_definitions(-DVERSION_MAJOR=${PROJECT_VERSION_MAJOR})
 add_definitions(-DVERSION_MINOR=${PROJECT_VERSION_MINOR})
 add_definitions(-DVERSION_PATCH=${PROJECT_VERSION_PATCH})
+add_definitions(-DNOMINMAX)
 
-file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
+if (WIN32)
+    add_definitions(-DVK_USE_PLATFORM_WIN32_KHR)
+endif()
+
+include(FetchContent)
+
+FetchContent_Declare(glfw
+    GIT_REPOSITORY git@github.com:glfw/glfw.git
+    GIT_TAG 3.3.8
+)
+
+if(NOT glfw_POPULATED)
+    FetchContent_Populate(glfw)
+    set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+    add_subdirectory(${glfw_SOURCE_DIR} ${glfw_BINARY_DIR})
+endif()
+
+file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
 if (WIN32)
     target_include_directories(${PROJECT_NAME} PUBLIC
-        $ENV{MINGW_ROOT}/x86_64-w64-mingw32/include
-        $ENV{USERPROFILE}/dev/sdks/vulkan/Include
-        $ENV{USERPROFILE}/dev/sdks/glfw/include
-        $ENV{USERPROFILE}/dev/sdks/glm/glm
-        $ENV{USERPROFILE}/dev/sdks/entt/src
-        ${PROJECT_SOURCE_DIR}/src
+        "C:\\VulkanSDK\\1.3.231.1\\Include"
+        ${glfw_SOURCE_DIR}/include
+        ${CMAKE_SOURCE_DIR}/include
     )
 
     target_link_directories(${PROJECT_NAME} PUBLIC
-        $ENV{MINGW_ROOT}/x86_64-w64-mingw32/lib
-        $ENV{USERPROFILE}/dev/sdks/vulkan/Lib
-        $ENV{USERPROFILE}/dev/sdks/glfw/lib-mingw-w64
+        "C:\\VulkanSDK\\1.3.231.1\\Lib"
+        ${glfw_BINARY_DIR}/src/Debug
     )
 
     target_link_libraries(${PROJECT_NAME} glfw3 vulkan-1 shaderc_shared)
