fixed build/link for winblows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,5 @@
 cmake_minimum_required(VERSION 3.20.0)
-project(octo VERSION 0.1.0)
-
-add_definitions(-DENGINE_NAME="${PROJECT_NAME}")
-add_definitions(-DVERSION_MAJOR=${PROJECT_VERSION_MAJOR})
-add_definitions(-DVERSION_MINOR=${PROJECT_VERSION_MINOR})
-add_definitions(-DVERSION_PATCH=${PROJECT_VERSION_PATCH})
-add_definitions(-DNOMINMAX)
-
-if (WIN32)
-    add_definitions(-DVK_USE_PLATFORM_WIN32_KHR)
-endif()
+project(octo VERSION 0.1.0 LANGUAGES CXX)
 
 include(FetchContent)
 
@@ -18,28 +8,42 @@ FetchContent_Declare(glfw
     GIT_TAG 3.3.8
 )
 
-if(NOT glfw_POPULATED)
-    FetchContent_Populate(glfw)
-    set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
-    set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-    add_subdirectory(${glfw_SOURCE_DIR} ${glfw_BINARY_DIR})
-endif()
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+
+FetchContent_MakeAvailable(glfw)
 
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
+target_compile_definitions(${PROJECT_NAME} PUBLIC
+    -DENGINE_NAME="${PROJECT_NAME}"
+    -DVERSION_MAJOR=${PROJECT_VERSION_MAJOR}
+    -DVERSION_MINOR=${PROJECT_VERSION_MINOR}
+    -DVERSION_PATCH=${PROJECT_VERSION_PATCH}
+    -DNOMINMAX
+)
+
 if (WIN32)
+    set(WIN32_VULKAN_SDK_ROOT "C:\\VulkanSDK\\1.3.231.1")
+
+    target_compile_definitions(${PROJECT_NAME} PUBLIC
+        -DVK_USE_PLATFORM_WIN32_KHR
+    )
+
+    message(${WIN32_VULKAN_SDK_ROOT}/Include)
+    
     target_include_directories(${PROJECT_NAME} PUBLIC
-        "C:\\VulkanSDK\\1.3.231.1\\Include"
         ${glfw_SOURCE_DIR}/include
+        ${WIN32_VULKAN_SDK_ROOT}/Include
         ${PROJECT_SOURCE_DIR}/include
     )
 
     target_link_directories(${PROJECT_NAME} PUBLIC
-        "C:\\VulkanSDK\\1.3.231.1\\Lib"
+        ${WIN32_VULKAN_SDK_ROOT}/Lib
         ${glfw_BINARY_DIR}/src/Debug
     )
 
