updated for macos

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -22,6 +22,9 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     message("==> Building for: MACOS")
     target_compile_definitions(${PROJECT_NAME} PUBLIC -DPLATFORM_MACOS)
+    target_include_directories(${PROJECT_NAME} PUBLIC /opt/homebrew/include)
+    target_link_directories(${PROJECT_NAME} PUBLIC /opt/homebrew/lib)
+    target_link_libraries(${PROJECT_NAME} glfw)# vulkan shaderc_shared)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     message("==> Building for: WINDOWS")
     target_compile_definitions(${PROJECT_NAME} PUBLIC -DPLATFORM_WINDOWS)
