--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,9 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     message("==> Building for: MACOS")
     target_compile_definitions(${PROJECT_NAME} PUBLIC -DPLATFORM="MACOS")
+    target_include_directories(${PROJECT_NAME} PUBLIC ../engine/include /opt/homebrew/include)
+    target_link_directories(${PROJECT_NAME} PUBLIC /opt/homebrew/lib ../engine/build/)
+    target_link_libraries(${PROJECT_NAME} octo glfw)# vulkan shaderc_shared)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     message("==> Building for: WINDOWS")
     target_compile_definitions(${PROJECT_NAME} PUBLIC -DPLATFORM="WINDOWS")
