--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,17 +16,14 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     message("==> Building for: LINUX")
-    target_compile_definitions(${PROJECT_NAME} PUBLIC -DPLATFORM="LINUX")
     target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include ../engine/include)
     target_link_directories(${PROJECT_NAME} PUBLIC ../engine/build/)
-    target_link_libraries(${PROJECT_NAME} octo glfw)#glfw vulkan shaderc_shared)
+    target_link_libraries(${PROJECT_NAME} octo glfw vulkan)#glfw vulkan shaderc_shared)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     message("==> Building for: MACOS")
-    target_compile_definitions(${PROJECT_NAME} PUBLIC -DPLATFORM="MACOS")
     target_include_directories(${PROJECT_NAME} PUBLIC ../engine/include /opt/homebrew/include)
     target_link_directories(${PROJECT_NAME} PUBLIC /opt/homebrew/lib ../engine/build/)
     target_link_libraries(${PROJECT_NAME} octo glfw)# vulkan shaderc_shared)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     message("==> Building for: WINDOWS")
-    target_compile_definitions(${PROJECT_NAME} PUBLIC -DPLATFORM="WINDOWS")
 endif()
