updated CMakeLists, added build scripts

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -12,15 +12,16 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
     -DOCTO_VERSION_MINOR=${PROJECT_VERSION_MINOR}
     -DOCTO_VERSION_PATCH=${PROJECT_VERSION_PATCH}
     -DNOMINMAX
+    -DCMAKE_BUILD_TYPE=Debug
 )
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    message("==> Building for: LINUX")
+    message("\t*** Building for: LINUX ***")
     target_compile_definitions(${PROJECT_NAME} PUBLIC -DOCTO_PLATFORM_LINUX)
     target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
     target_link_libraries(${PROJECT_NAME} glfw vulkan)# vulkan shaderc_shared)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-    message("==> Building for: MACOS")
+    message("\t*** Building for: MACOS ***")
     target_compile_definitions(${PROJECT_NAME} PUBLIC -DOCTO_PLATFORM_MACOS)
     
     target_include_directories(${PROJECT_NAME} PUBLIC
@@ -35,6 +36,6 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     
     target_link_libraries(${PROJECT_NAME} glfw vukan)# vulkan shaderc_shared)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
-    message("==> Building for: WINDOWS")
+    message("\t*** Building for: WINDOWS ***")
     target_compile_definitions(${PROJECT_NAME} PUBLIC -DOCTO_PLATFORM_WINDOWS)
 endif()
