--- a/octo/CMakeLists.txt
+++ b/octo/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.22)
-project(octo VERSION 0.1.0 LANGUAGES CXX)
+project(octo VERSION 0.1.0 LANGUAGES C)
 
-file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.cpp)
+file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.c)
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 
