completed project build/run setup

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,52 +1,37 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Release (Linux)",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/bin/test",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/bin/",
-            "environment": [
-                {
-                    "name": "BUILD_TYPE",
-                    "value": "BUILD_TYPE_RELEASE"
-                }
-            ],
-            "preLaunchTask": "BUILD"
-        },
         {
             "name": "Debug (Linux)",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/test",
+            "program": "${workspaceFolder}/build/debug/test/test",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/bin/",
+            "cwd": "${workspaceFolder}/build/debug/test",
             "environment": [
                 {
-                    "name": "BUILD_TYPE",
-                    "value": "BUILD_TYPE_DEBUG"
+                    "name": "OCTO_BUILD_TYPE",
+                    "value": "Debug"
                 }
             ],
-            "preLaunchTask": "BUILD"
+            "preLaunchTask": "build-debug"
+        },
+        {
+            "name": "Release (Linux)",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/release/test/test",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/build/release/test",
+            "environment": [
+                {
+                    "name": "OCTO_BUILD_TYPE",
+                    "value": "Release"
+                }
+            ],
+            "preLaunchTask": "build-release"
         }
-        // ,{
-        //     "name": "(Windows) Launch",
-        //     "type": "cppvsdbg",
-        //     "request": "launch",
-        //     "program": "${workspaceFolder}/bin/test.exe",
-        //     "args": [],
-        //     "stopAtEntry": false,
-        //     "cwd": "${workspaceFolder}/bin/",
-        //     "environment": [],
-        //     "console": "newExternalWindow",
-        //     "preLaunchTask": "BUILD"
-        // }
     ]
 }
