updated code brought in from 'main'

--- a/octo/CMakeLists.txt
+++ b/octo/CMakeLists.txt
@@ -10,6 +10,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
     -DVERSION_MAJOR=${PROJECT_VERSION_MAJOR}
     -DVERSION_MINOR=${PROJECT_VERSION_MINOR}
     -DVERSION_PATCH=${PROJECT_VERSION_PATCH}
+    -DASSETS_PATH="${PROJECT_SOURCE_DIR}/../assets/"
 )
 
 if (ENV{BUILD_TYPE} STREQUAL "BUILD_TYPE_DEBUG")
